fixed spacing

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,6 +1,7 @@
 .header-slider {
   background-color: var(--color-background-variant);
   padding: 100px 0 40px 0;
+  margin-bottom: 120px;
 }
 
 .item-container {
